Fix column width in NDA.html

--- a/NDA.html
+++ b/NDA.html
@@ -52,7 +52,7 @@
 						<label for="NDA-input-file" class="col-sm-4 control-label NDA-control-label">INPUT file</label>
 						<div class="form-group">
 							<button type="button" class="btn btn-primary pull-right col-sm-2">Upload</button>
-							<div class="NDA-choose-file"><input type="file" id="NDA-input-file"></div>
+							<div class="NDA-choose-file col-sm-6"><input type="file" id="NDA-input-file"></div>
 
 						</div>
 
@@ -64,7 +64,7 @@
 						<label for="NDA-output-file" class="col-sm-4 control-label NDA-control-label">OUTPUT file</label>
 						<div class="form-group">
 							<button type="button" class="btn btn-primary pull-right col-sm-2">Upload</button>
-							<div class="NDA-choose-file"><input type="file" id="NDA-output-file"></div>
+							<div class="NDA-choose-file col-sm-6"><input type="file" id="NDA-output-file"></div>
 
 						</div>
 
